# sdcc8051_cmake

./: .gitignore  CMakeLists.txt  README.md  toolchain-SDCC.cmake
cmake/Compiler/: SDAS8051-ASM.cmake  SDCC-C.cmake
include/: STC15Fxx.h
src/: CMakeLists.txt  dumb.asm  main.c
